[project]
name = "afti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.2.8",
    "httpx>=0.28.1",
    "inference-sdk>=0.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "markdownify>=1.2.2",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tavily>=1.1.0",
    "tavily-python>=0.7.13",
]
